<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_name"
            style="@style/heads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:padding="@dimen/layout_padding"
            android:text="@string/app_name" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_name"
            android:background="@color/colorPrimary"
            android:padding="@dimen/layout_padding_internal">

            <TextView
                android:id="@+id/songName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="18dp"
                android:background="@color/trans_black"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:nextFocusDown="@+id/widget_play"
                android:padding="@dimen/layout_padding_internal"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/current_song"
                android:textColor="#fff"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold">

                <requestFocus />
            </TextView>

            <ImageButton
                android:id="@+id/widget_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/songName"
                android:layout_centerInParent="true"
                android:background="@null"
                android:contentDescription="@string/play_button"
                android:focusable="true"
                android:nextFocusUp="@id/songName"
                android:src="@mipmap/ic_play_arrow_white_48dp" />
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>